--- a/mysite/templates/dashboard/base.html
+++ b/mysite/templates/dashboard/base.html
@@ -42,6 +42,8 @@
 <script src="{% static 'dashboard/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'dashboard/js/adminlte.js' %}"></script>
-<!--{% block javascript %}{% endblock %}-->
+  <script src="{% static 'dashboard/plugins/summernote/summernote-bs4.min.js' %}"></script>
+<script src="{% static 'dashboard/dist/js/demo.js' %}"></script>
+{% block javascript %}{% endblock %}
 </body>
 </html>
