--- a/mysite/templates/dashboard/faculty/form.html
+++ b/mysite/templates/dashboard/faculty/form.html
@@ -5,12 +5,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1>Product List</h1>
+        <h1>Faculty list</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Home</a></li>
-          <li class="breadcrumb-item active">Product List</li>
+          <li class="breadcrumb-item active">Faculty List</li>
         </ol>
       </div>
     </div>
@@ -27,25 +27,7 @@
                 <div class="card-body">
                   <div class="form-group">
                     <label >Event title</label>
-                      {{form.title}}
-                  </div>
-                </div>
-                <div class="card-body">
-                  <div class="form-group">
-                    <label >Event message</label>
-                      {{form.message}}
-                  </div>
-                </div>
-                <div class="card-body">
-                  <div class="form-group">
-                    <label >Event image</label>
-                      {{form.image}}
-                  </div>
-                </div>
-                <div class="card-body">
-                  <div class="form-group">
-                    <label >Event date</label>
-                      {{form.date}}
+                      {{form.name}}
                   </div>
                 </div>
                 <div class="card-footer">
