--- a/mysite/templates/dashboard/trainers/list.html
+++ b/mysite/templates/dashboard/trainers/list.html
@@ -5,7 +5,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1>Category List</h1>
+        <h1>Trainers List</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
@@ -25,7 +25,7 @@
                 <h3 class="card-title">Responsive Hover Table</h3>
 
                 <div class="card-tools">
-                    <a href="{% url 'trainer_add' %}"><div class="btn btn-block btn-success">Add</div></a>
+                    <a href="{% url 'trainer_add' %}"><div class="btn btn-block btn-outline-success">Add</div></a>
                 </div>
               </div>
 
@@ -46,8 +46,8 @@
                       <td>{{ forloop.counter }}</td>
                       <td>{{ i.full_name }}</td>
                       <td>{{ i.created_at }}</td>
-                      <td><a href="{% url 'trainer_edit' pk=i.id %}"><div class="btn btn-block btn-primary">Edit</div></a></td>
-                      <td><a href="{% url 'trainer_delete' pk=i.id %}"><div class="btn btn-block btn-danger">Delete</div></a></td>
+                      <td><a href="{% url 'trainer_edit' pk=i.id %}"><div class="btn btn-block btn-outline-warning">Edit</div></a></td>
+                      <td><a href="{% url 'trainer_delete' pk=i.id %}"><div class="btn btn-block btn-outline-danger ">Delete</div></a></td>
                     </tr>
                     {% endfor %}
                   </tbody>
